--- a/src/styles/components/base.css
+++ b/src/styles/components/base.css
@@ -3,12 +3,12 @@
 @import "searchBar.css";
 
 :root {
-    --purlple: #5954D2;
-    --blue: #3478D7;
+  --purlple: #5954d2;
+  --blue: #3478d7;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}	
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
