--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -1,6 +1,6 @@
 .primary-button {
   background-color: var(--purlple);
-  font-family: 'InterstateBold', sans-serif;
+  font-family: "InterstateBold", sans-serif;
   width: 165px;
   height: 40px;
   justify-content: space-evenly;
