--- a/src/styles/components/base.css
+++ b/src/styles/components/base.css
@@ -1,6 +1,7 @@
 @import "typography.css";
 @import "button.css";
 @import "searchBar.css";
+@import "createEditForm.css";
 
 :root {
   --purlple: #5954d2;
@@ -12,4 +13,5 @@ body {
   padding: 0;
   box-sizing: border-box;
   overflow: hidden;
+  font-family: "InterstateRegular", sans-serif;
 }
